@@ -1,3 +1,9 @@
+2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* background-properties.glade, 
+	  background-properties-capplet.c:  Fixes for ui-review
+	  bug report #98916 and duplicate mnemonic fixes.
+	  
 2003-07-07  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.4
